--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "langchain-community>=0.3.7",
     "mypy>=1.13.0",
     "types-beautifulsoup4>=4.12.0.20241020",
+    "html2text>=2024.2.26",
+    "typer>=0.13.1",
 ]
 
 [dependency-groups]
