--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "types-beautifulsoup4>=4.12.0.20241020",
     "html2text>=2024.2.26",
     "typer>=0.13.1",
+    "qdrant-client>=1.12.1",
 ]
 
 [dependency-groups]
