--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,21 +5,33 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "zenml[server]>=0.70.0",
-    "numpy>=1.19.5,<2",
-    "rich>=13.9.4",
-    "click>=8.1.3",
-    "loguru>=0.7.2",
-    "tqdm>=4.67.0",
-    "playwright>=1.48.0",
-    "bs4>=0.0.2",
-    "pydantic-settings>=2.6.1",
-    "langchain-community>=0.3.7",
-    "mypy>=1.13.0",
-    "types-beautifulsoup4>=4.12.0.20241020",
-    "html2text>=2024.2.26",
-    "typer>=0.13.1",
-    "qdrant-client>=1.12.1",
+  "bitsandbytes>=0.45.3",
+  "bs4>=0.0.2",
+  "comet-ml>=3.43.2",
+  "datasets>=3.3.2",
+  "flash-attn>=2.7.4.post1",
+  "grpcio-tools>=1.54.0",
+  "html2text>=2024.2.26",
+  "huggingface-hub[cli]>=0.29.1",
+  "langchain-community>=0.3.7",
+  "litellm>=1.61.15",
+  "loguru>=0.7.2",
+  "mypy>=1.13.0",
+  "numpy>=1.19.5,<2",
+  "peft>=0.14.0",
+  "playwright>=1.48.0",
+  "pydantic-settings>=2.6.1",
+  "qdrant-client>=1.12.1",
+  "rich>=13.9.4",
+  "torch<2.6.0",
+  "tqdm>=4.67.0",
+  "transformers==4.47.1",
+  "trl<0.9.0",
+  "typer>=0.13.1",
+  "types-beautifulsoup4>=4.12.0.20241020",
+  "unsloth>=2024.8",
+  "xformers<0.0.27",
+  "zenml[server]>=0.70.0",
 ]
 
 [dependency-groups]
